--- a/index.html
+++ b/index.html
@@ -1,176 +1,90 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>Ahmed Ashraf CV</title>
-    <link href="dist/output.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Ahmed's Website</title>
+    <link href="/dist/output.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
 
 </head>
 
-<body class="font-normal bg-white text-black">
-
-    <div class="flex">
-        <aside class="w-1/4 bg-black text-white p-5">
-            <section class="p-4 w-custom mt-20">
-                <h2 class="text-2xl mb-3 font-bold"> Contact Me:</h2>
-                <p> <i class="fas fa-solid fa-envelope text-white"></i> ahmedashraaff113@gmail.com</p>
-                <p> <i class="fas fa-solid fa-phone text-white"></i> 01128580806</p>
-                <p> <a href="https://www.linkedin.com/in/ahmedashraaff" target="_blank" class="text-white">
-                        <i class="fab fa-linkedin mr-3" style="color:white;"></i></a>
-                    <a href="https://github.com/AhmedAsh4" target="_blank" class="text-white">
-                        <i class="fab fa-github mr-3" style="color:white;"></i></a>
-                    <a href="https://www.kaggle.com/ahmedashraaff" target="_blank" class="text-white">
-                        <i class="fab fa-brands fa-kaggle" style="color: white;"></i></a>
-                </p>
-            </section>
-
-            <section class="p-4 w-custom">
-                <h2 class="text-2xl mb-3 font-bold"> Skills:</h2>
-                <p> <i class="fab fa-brands fa-python text-white"></i> Python</p>
-                <p> <i class="fas fa-solid fa-database text-white"></i> PostgreSQL</p>
-                <p> <i class="fab fa-brands fa-git-alt text-white"></i> Git</p>
-                <div class="flex items-center">
-                    <svg class="text-white" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"
-                        width="1em" height="1em">
-                        <path
-                            d="M1.292 5.856L11.54 0v24l-4.095-2.378V7.603l-6.168 3.564.015-5.31zm21.43 5.311l-.014-5.31L12.46 0v24l4.095-2.378V14.87l3.092 1.788-.018-4.618-3.074-1.756V7.603l6.168 3.564z"
-                            fill="white"></path>
-                    </svg>
-                    <span>&nbsp;TensorFlow</span>
-                </div>
-
-                <div class="flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512">
-                        <path fill="white"
-                            d="M495.855 367.604c-28.98-73.177-53.037-148.231-80.725-221.893c-12.23-31.362-24.198-62.986-40.868-92.33c-6.62-10.535-12.956-22.119-23.814-28.86c-2.739-1.74-5.828-2.479-8.88-2.42c-5.084.096-10.14 2.37-14.025 5.65c-14.571 11.543-23.209 28.334-32.896 43.793c-17.114 28.698-35.156 58.748-63.773 77.396c-13.44 9.485-31.039 10.514-43.995 20.686c-17.72 13.36-29.767 32.31-44.298 48.737c-3.31 3.956-8.436 5.53-12.916 7.67C86.315 243.71 42.945 261.35 0 279.916c36.367 28.132 75.115 53.157 112.208 80.321c10.172-2.018 20.383-6.196 30.877-4.339c16.63 5.207 26.377 21.15 34.006 35.721c15.5 31.765 26.7 65.307 39.253 98.283c20.988-1.493 39.878-12.31 56.104-25.025c31.24-25.307 55.034-58.001 81.23-88.192c12.552-13.199 25.347-28.92 44.197-32.593c19.05-4.601 39.454 2.22 53.581 15.338c19.818 17.719 37.376 38.203 60.544 51.765c-3.108-15.338-10.575-29.101-16.145-43.592zm-324.011-51.563c-18.284 10.817-37.699 19.717-56.71 29.162c-29.828-19.98-58.889-41.15-88.192-61.856c39.515-17.315 79.635-33.4 119.675-49.545c18.97 14.813 38.547 28.88 57.517 43.693c-8.92 14.248-19.657 27.487-32.29 38.546zm40.665-49.646c-18.85-14.167-37.94-27.951-56.508-42.482c11.907-16.226 24.945-31.906 40.565-44.701c10.333-6.62 22.966-8.456 33.703-14.43c25.469-12.714 42.845-36.044 59.434-58.324c-21.271 55.216-43.975 110.654-77.194 159.937z" />
-                    </svg>
-                    <span>&nbsp;MatLab</span>
-                </div>
-                <p> <i class="fab fa-microsoft text-white"></i> Microsoft Office</p>
-            </section>
-
-            <section class="p-4 w-custom">
-                <h2 class="text-2xl mb-3 font-bold"> Languages:</h2>
-                <div class="flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path fill="white"
-                            d="M12 4c-1.92 0-3.5 1.58-3.5 3.5c0 .93.38 1.78 1 2.41c-1.53 1-2.5 2.71-2.5 4.59c0 3.03 2.47 5.5 5.5 5.5c1.76 0 3.5-.46 5-1.34l-1-1.73c-1.22.7-2.6 1.07-4 1.07c-1.94 0-3.5-1.55-3.5-3.5a3.49 3.49 0 0 1 2.59-3.38l5.21-1.4l-.52-1.93L11.83 9c-.75-.1-1.33-.72-1.33-1.5c0-.84.66-1.5 1.5-1.5c.26 0 .5.07.75.2l1-1.73C13.22 4.16 12.61 4 12 4Z" />
-                    </svg>
-                    <span>&nbsp;Arabic (Native)</span>
-                </div>
-
-                <div class="flex items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-                        <path fill="white"
-                            d="M14 10h2v.757a4.5 4.5 0 0 1 7 3.743V20h-2v-5.5c0-1.43-1.174-2.5-2.5-2.5S16 13.07 16 14.5V20h-2V10Zm-2-6v2H4v5h8v2H4v5h8v2H2V4h10Z" />
-                    </svg>
-                    <span>&nbsp;English (C1)</span>
-                </div>
-            </section>
-
-            <section class="p-4 w-custom">
-                <h2 class="text-2xl mb-3 font-bold"> Hobbies:</h2>
-                <p> <i class="fas fa-solid fa-film text-white"></i> Movies</p>
-                <p> <i class="fas fa-solid fa-book text-white"></i> Books</p>
-                <p> <i class="fas fa-solid fa-music text-white"></i> Music</p>
-            </section>
-
-            <footer class="bg-black text-white p-5 mt-44">
-                <p class="font-bold">© 2023 Ahmed Ashraf</p>
-            </footer>
-        </aside>
-
-        <main class="w-3/4 p-5">
-            <header class="bg-gray-400 text-white flex items-center justify-center p-1 rounded-md">
+<body>
+    <!-- Navigation bar -->
+    <nav class="p-4 bg-secondary-color">
+        <div class="container flex items-center justify-between mx-auto">
+            <turbo-frame id="loadable" class="animate-fade-in-1">
+                <h3 class="mb-4 text-3xl font-bold text-white">Ahmed
+                    <span class="mb-4 text-3xl font-bold text-text-color1 animate-fade-in-2">Ashraf</span></h3>
+            </turbo-frame>
+            <turbo-frame id="loadable" class="animate-fade-in-menu">
+                <ul class="flex space-x-4">
+                    <li><a href="index.html" target="_self" class="text-white hover:underline">Home</a></li>
+                    <li><a href="Certs.html" class="text-white hover:underline">Experience</a></li>
+                    <li><a href="proj.html" class="text-white hover:underline">Projects</a></li>
+                    <li><a href="recs.html" class="text-white hover:underline">Personal Recommendations</a></li>
+                </ul>
+            </turbo-frame>
+        </div>
+    </nav>
+    <!-- Divided body layout -->
+    <div class="flex items-center h-screen bg-primary-color">
+        <div class="container flex items-center mx-auto">
+            <!-- Left side with centered image -->
+            <div class="w-1/2">
                 <img src="https://assets.datacamp.com/users/avatars/013/334/509/medium/69d3d400-cf44-4d2f-a9a9-1756a82203ef.jpg?1692469172"
-                    alt="Ahmed Ashraf" class="mr-5 w-20 h-20 rounded-md object-cover">
-                <div class="ml-5 flex flex-col justify-center h-full">
-                    <h1 class="text-4xl text-center font-bold ">Ahmed Ashraf Ibrahim</h1>
-                    <p class="text-2xl text-center ">Data Scientist / ML Engineer</p>
+                    alt="Ahmed Ashraf" class="mx-auto rounded-lg shadow-md animate-slide-left">
+            </div>
+
+            <!-- Right side with centered text -->
+            <div class="w-1/2">
+                <div class="animate-slide-right">
+                    <h1 class="flex mb-4 text-3xl font-bold text-text-color1">Hey
+                        <span class="animate-wave">👋🏻</span>, I'm Ahmed</h1>
+        
+                    <p class="flex text-lg text-text-color2">I am currently pursuing a bachelor's degree in Computer
+                        Science at MUST, where I am learning the fundamentals of programming, algorithms, Machine
+                        Learning, Deep Learning, Data Science, and data structures.<br>
+                        I am passionate about using data to tell compelling stories that can inform, persuade, and
+                        inspire audiences.<br>
+                        I am eager to further develop my skills and competencies in data science, machine learning, and
+                        data storytelling, and to contribute to the advancement of knowledge and innovation in this
+                        field.<br>
+                        As a Data Scientist, I gained valuable experience in applying data science and machine learning
+                        techniques to real-world problems. I worked on analyzing, visualizing, and communicating data
+                        insights using Python, Kaggle, and Github platforms. I also earned multiple certifications,
+                        badges, and awards for my proficiency in Python and ML.</p>
                 </div>
-            </header>
-            <section class="p-5 w-custom">
-                <h2 class="text-3xl mb-3 font-bold"><i class="fas fa-solid fa-user text-black"></i> About Me:</h2>
-                <p>Accomplished Data Scientist with a passion for delivering valuable data through analytical functions
-                    and data retrieval methods. Innovative Programmer striving to make the world a more unified
-                    and connected place.</p>
-            </section>
-
-            <section class="p-5">
-                <h2 class="text-3xl mb-3 font-bold"><i class="fas fa-solid fa-school text-black"></i>
-                    Education:</h2>
-                <h4 class="text-xl bold">Artifical Intelligence, Misr University for Science and Technology </h4>
-                <h6 class="text-sm text-gray-600">October 2020 - July 2024 </h6>
-                <h5>Studying in the AI department,
-                    currently top of my class with a GPA of 3.9 </h5>
-            </section>
-
-            <section class="p-5">
-                <h2 class="text-3xl mb-3 font-bold"><i class="fas fa-solid fa-certificate text-black"></i> Certificates:
-                </h2>
-                <ul class="list-disc ml-5">
-                    <li class="mb-2">
-                        <a href="https://www.datacamp.com/certificate/DS0025222252991" target="_blank"
-                            class="font-medium text-blue-700 hover:text-blue-500">
-                            Data Scientist Professional Certificate, DataCamp</a>
-                        <h6 class="text-sm text-gray-600"><i class="fas fa fa-calendar text-black"></i>
-                            September 2023 - September 2025</h6>
-                    </li>
-                    <li class="mb-2">
-                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/GK5LQ92ACGCK"
-                            target="_blank" class="font-medium text-blue-700 hover:text-blue-500">
-                            DeepLearning.AI TensorFlow Developer, Coursera</a>
-                        <h6 class="text-sm text-gray-600"><i class="fas fa fa-calendar text-black"></i> December
-                            2022</h6>
-                    </li>
-                    <li class="mb-2">
-                        <a href="https://www.coursera.org/account/accomplishments/professional-cert/TM7CD9QLAQGB"
-                            target="_blank" class="font-medium text-blue-700 hover:text-blue-500">
-                            IBM Data analyst Professional Certificate, Coursera</a>
-                        <h6 class="text-sm text-gray-600"><i class="fas fa fa-calendar text-black"></i> November
-                            2022</h6>
-                    </li>
-                    <li class="mb-2">
-                        <a href="https://www.hackerrank.com/certificates/52c122f4dd54" target="_blank"
-                            class="font-medium text-blue-700 hover:text-blue-500">
-                            SQL (advanced), HackerRank</a>
-                        <h6 class="text-sm text-gray-600"><i class="fas fa fa-calendar text-black"></i> October
-                            2023</h6>
-                    </li>
-                </ul>
-            </section>
-
-            <section class="p-5 w-custom">
-                <h2 class="text-3xl mb-3 font-bold"> <i class='fas fa-project-diagram text-black'></i> Projects:
-                </h2>
-                <ul class="list-disc ml-5">
-                    <li class="mb-2">
-                        <a href="https://github.com/AhmedAsh4/Easy-AI" target="_blank"
-                            class="font-medium text-blue-700 hover:text-blue-500">
-                            Easy Ai</a>
-                        <h6 class="text-sm text-black">A program designed to accept any .CSV file
-                            and allows the user to either solve Regression or Classification problems
-                            using a variety of ML techniques</h6>
-                    </li>
-                    <li class="mb-2">
-                        <a href="https://github.com/AhmedAsh4/FakeNewsDetector" target="_blank"
-                            class="font-medium text-blue-700 hover:text-blue-500">
-                            Fake News Detector</a>
-                        <h6 class="text-sm text-black">Used a variety of ML and NLP techniques
-                            to Predict whether an article is Fake news or Not</h6>
-                    </li>
-                    <li class="mb-2">
-                        <a href="https://github.com/AhmedAsh4/Global-Warming-Trends" target="_blank"
-                            class="font-medium text-blue-700 hover:text-blue-500">
-                            Global Warming Trends</a>
-                        <h6 class="text-sm text-black">An analysis on global warming trend from 1961 to 2022</h6>
-                    </li>
-                </ul>
-            </section>
-        </main>
+            </div>
+        </div>
     </div>
+    <section class="shadow-md bg-primary-color">
+        <div class="container p-8 mx-auto animate-slide-left">
+            <h2 class="p-10 mb-3 text-4xl font-bold text-center text-text-color1"> How To Reach Me</h2>
+            <span class="p-8 text-3xl text-left text-text-color1"> <i class="text-white fas fa-solid fa-envelope hover:animate-wave"></i> ahmedashraaff113@gmail.com</span>
+            <span class="p-8 text-3xl text-right text-text-color1 ml-72"> <i class="text-white fas fa-solid fa-phone hover:animate-wave"></i>+(20) 01128580806</span>
+            <p class="flex justify-center p-8 text-3xl text-center text-text-color1">
+                <a href="https://www.linkedin.com/in/ahmedashraaff" target="_blank" class="mx-4 text-white">
+                    <i class="fab fa-linkedin hover:animate-wave" style="color:white;"></i>
+                </a>
+                <a href="https://github.com/AhmedAsh4" target="_blank" class="mx-4 text-white">
+                    <i class="fab fa-github hover:animate-wave" style="color:white;"></i>
+                </a>
+                <a href="https://www.kaggle.com/ahmedashraaff" target="_blank" class="mx-4 text-white">
+                    <i class=" fab fa-brands fa-kaggle hover:animate-wave" style="color: white;"></i>
+                </a>
+                <a href="./imgs/Ahmed Ashraf CV.pdf" target="_blank" class="mx-4 mt-2 text-white">
+                    <svg class="hover:animate-wave" width="26" height="28" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd">
+                        <path fill="white" d="M3 24h19v-23h-1v22h-18v1zm17-24h-18v22h18v-22zm-1 1h-16v20h16v-20zm-2 16h-12v1h12v-1zm0-3h-12v1h12v-1zm0-3h-12v1h12v-1zm-7.348-3.863l.948.3c-.145.529-.387.922-.725 1.178-.338.257-.767.385-1.287.385-.643 0-1.171-.22-1.585-.659-.414-.439-.621-1.04-.621-1.802 0-.806.208-1.432.624-1.878.416-.446.963-.669 1.642-.669.592 0 1.073.175 1.443.525.221.207.386.505.496.892l-.968.231c-.057-.251-.177-.449-.358-.594-.182-.146-.403-.218-.663-.218-.359 0-.65.129-.874.386-.223.258.335.675-.335 1.252 0 .613.11 1.049.331 1.308.22.26.506.39.858.39.26 0 .484-.082.671-.248.187-.165.322-.425.403-.779zm3.023 1.78l-1.731-4.842h1.06l1.226-3.584 1.186-3.584h1.037l-1.734-4.842h-1.044z"/>
+                    </svg>
+                </a>
+            </p>
+            
+        </div>
+    </section>
 </body>
 
 </html>
