--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             </div>
         </div>
     </div>
-    <section class="shadow-md bg-primary-color">
+    <section class=" bg-primary-color">
         <div class="container p-8 mx-auto animate-slide-left">
-            <h2 class="p-10 mb-3 text-4xl font-bold text-center text-text-color1"> How To Reach Me</h2>
+            <h2 class="p-10 mb-3 text-4xl font-bold text-center text-text-color1"> Get in touch</h2>
             <span class="p-8 text-3xl text-left text-text-color1"> <i class="text-white fas fa-solid fa-envelope hover:animate-wave"></i> ahmedashraaff113@gmail.com</span>
             <span class="p-8 text-3xl text-right text-text-color1 ml-72"> <i class="text-white fas fa-solid fa-phone hover:animate-wave"></i>+(20) 01128580806</span>
             <p class="flex justify-center p-8 text-3xl text-center text-text-color1">
