--- a/proj.html
+++ b/proj.html
@@ -31,6 +31,134 @@
         </div>
     </nav>
 
+    <section class="mb-32">
+        <div class="flex flex-col h-screen mt-11 mb-11">
+            <h1 class="mb-16 text-4xl text-center text-text-color1 animate-fade-in-2">Projects</h1>
+            <div class="container flex items-center mb-11">
+                <div class="w-1/2 animate-slide-left">
+                    <h4 class="mb-3 text-xl text-center text-text-color1"> Easy Ai</h4>
+                    <h6 class="mb-3 text-sm text-center text-text-color2">A program designed to accept any .CSV file
+                        and allows the user to either solve Regression or Classification problems
+                        using a variety of ML techniques</h6>
+                    <a class="block w-56 h-56 " href="https://github.com/AhmedAsh4/Easy-AI"
+                        target="_blank">
+                        <img src="./imgs/easy.PNG" alt="Easy-AI"
+                            class="w-56 h-56 mx-auto rounded-lg shadow-md ml-52 animate-slide-left"></a>
+                </div>
+    
+                <div class="w-1/2 animate-slide-right">
+                    <h4 class="mb-3 text-xl text-center text-text-color1"> Fake News Detector</h4>
+                    <h6 class="mb-3 text-sm text-center text-text-color2">Used a variety of ML and NLP techniques
+                        to Predict whether an article is Fake news or Not</h6>
+                    <a class="block w-56 h-56 ml-32" href="https://github.com/AhmedAsh4/FakeNewsDetector"
+                        target="_blank">
+                        <img src="./imgs/News.png" alt="News"
+                            class="w-56 h-56 mx-auto rounded-lg shadow-md animate-slide-left" style="margin-left: 5rem;"></a>
+                </div>
+            </div>
+            <div class="container flex items-center mb-11">
+                <div class="w-1/2 animate-slide-left">
+                    <h4 class="mb-3 text-xl text-center text-text-color1"> Global Warming Trends
+                    </h4>
+                    <h6 class="mb-3 text-sm text-center text-text-color2">An analysis on global warming trend from 1961 to 2022</h6>
+                    <a class="block h-56 w-96"
+                        href="https://www.kaggle.com/code/ahmedashraaff/global-warming-trends"
+                        target="_blank">
+                        <img src="./imgs/Temp.png" alt="Temp"
+                            class="h-56 mx-auto ml-32 rounded-lg shadow-md w-96 animate-slide-left"></a>
+                </div>
+    
+                <div class="w-1/2 animate-slide-right">
+                    <h4 class="mb-3 text-xl text-center text-text-color1"> Product sales</h4>
+                    <h6 class="mb-3 text-sm text-center text-text-color2">Used a Variety of Data analysis techniques to find the most effective method to contact potential customers</h6>
+                    <a class="block h-56 ml-32 w-96"
+                        href="https://www.kaggle.com/code/ahmedashraaff/product-sales"
+                        target="_blank">
+                        <img src="./imgs/Product.png" alt="product"
+                            class="h-56 mx-auto rounded-lg shadow-md animate-slide-left w-96"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container p-8 mx-auto">
+            <h2 class="p-10 mb-3 text-4xl font-bold text-center text-text-color1 animate-fade-in-1">Languages & Skills
+            </h2>
+            <div class="flex flex-wrap">
+                <!-- Python -->
+                <div class="w-1/6 text-4xl text-center animate-fade-in-menu text-text-color1">
+                    <i class="text-white hover:animate-wave fab fa-brands fa-python"></i>
+                    <p>Python</p>
+                </div>
+
+                <!-- PostgreSQL -->
+                <div class="w-1/6 text-4xl text-center animate-fade-in-menu text-text-color1">
+                    <i class="text-white hover:animate-wave fas fa-solid fa-database"></i>
+                    <p>PostgreSQL</p>
+                </div>
+
+                <!-- Git -->
+                <div class="w-1/6 text-4xl text-center animate-fade-in-menu text-text-color1">
+                    <i class="text-white hover:animate-wave fab fa-brands fa-git-alt"></i>
+                    <p>Git</p>
+                </div>
+
+                <!-- TensorFlow -->
+                <div class="w-1/6 text-4xl text-center animate-fade-in-menu text-text-color1">
+                    <svg role="img" class="ml-24 hover:animate-wave" xmlns="http://www.w3.org/2000/svg" width="1em"
+                        height="1em" viewBox="0 0 24 24">
+                        <path
+                            d="M1.292 5.856L11.54 0v24l-4.095-2.378V7.603l-6.168 3.564.015-5.31zm21.43 5.311l-.014-5.31L12.46 0v24l4.095-2.378V14.87l3.092 1.788-.018-4.618-3.074-1.756V7.603l6.168 3.564z"
+                            fill="white"></path>
+                    </svg>
+                    <p>TensorFlow</p>
+                </div>
+
+                <!-- MatLab -->
+                <div class="w-1/6 text-4xl text-center animate-fade-in-menu text-text-color1">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="ml-24 hover:animate-wave" width="1em" height="1em"
+                        viewBox="0 0 512 512">
+                        <path fill="white"
+                            d="M495.855 367.604c-28.98-73.177-53.037-148.231-80.725-221.893c-12.23-31.362-24.198-62.986-40.868-92.33c-6.62-10.535-12.956-22.119-23.814-28.86c-2.739-1.74-5.828-2.479-8.88-2.42c-5.084.096-10.14 2.37-14.025 5.65c-14.571 11.543-23.209 28.334-32.896 43.793c-17.114 28.698-35.156 58.748-63.773 77.396c-13.44 9.485-31.039 10.514-43.995 20.686c-17.72 13.36-29.767 32.31-44.298 48.737c-3.31 3.956-8.436 5.53-12.916 7.67C86.315 243.71 42.945 261.35 0 279.916c36.367 28.132 75.115 53.157 112.208 80.321c10.172-2.018 20.383-6.196 30.877-4.339c16.63 5.207 26.377 21.15 34.006 35.721c15.5 31.765 26.7 65.307 39.253 98.283c20.988-1.493 39.878-12.31 56.104-25.025c31.24-25.307 55.034-58.001 81.23-88.192c12.552-13.199 25.347-28.92 44.197-32.593c19.05-4.601 39.454 2.22 53.581 15.338c19.818 17.719 37.376 38.203 60.544 51.765c-3.108-15.338-10.575-29.101-16.145-43.592zm-324.011-51.563c-18.284 10.817-37.699 19.717-56.71 29.162c-29.828-19.98-58.889-41.15-88.192-61.856c39.515-17.315 79.635-33.4 119.675-49.545c18.97 14.813 38.547 28.88 57.517 43.693c-8.92 14.248-19.657 27.487-32.29 38.546zm40.665-49.646c-18.85-14.167-37.94-27.951-56.508-42.482c11.907-16.226 24.945-31.906 40.565-44.701c10.333-6.62 22.966-8.456 33.703-14.43c25.469-12.714 42.845-36.044 59.434-58.324c-21.271 55.216-43.975 110.654-77.194 159.937z" />
+                    </svg>
+                    <p>MatLab</p>
+                </div>
+
+                <!-- Microsoft Office -->
+                <div class="w-1/6 text-4xl text-center animate-fade-in-menu text-text-color1">
+                    <i class="text-white hover:animate-wave fab fa-microsoft"></i>
+                    <p>Microsoft Office</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="container p-8 mx-auto">
+            <div class="flex flex-wrap">
+                <!--Arabic-->
+                <div class="w-1/2 text-4xl text-center animate-fade-in-menu text-text-color1">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="hover:animate-wave" style="margin-left: 17rem;"
+                        width="1.5em" height="1.5em" viewBox="0 0 24 24">
+                        <path fill="white"
+                            d="M12 4c-1.92 0-3.5 1.58-3.5 3.5c0 .93.38 1.78 1 2.41c-1.53 1-2.5 2.71-2.5 4.59c0 3.03 2.47 5.5 5.5 5.5c1.76 0 3.5-.46 5-1.34l-1-1.73c-1.22.7-2.6 1.07-4 1.07c-1.94 0-3.5-1.55-3.5-3.5a3.49 3.49 0 0 1 2.59-3.38l5.21-1.4l-.52-1.93L11.83 9c-.75-.1-1.33-.72-1.33-1.5c0-.84.66-1.5 1.5-1.5c.26 0 .5.07.75.2l1-1.73C13.22 4.16 12.61 4 12 4Z" />
+                    </svg>
+                    <p>Arabic (Native)</p>
+                </div>
+                <!--English-->
+                <div class="w-1/2 text-4xl text-center animate-fade-in-menu text-text-color1">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="hover:animate-wave" style="margin-left: 17rem;"
+                        width="1.5em" height="1.5em" viewBox="0 0 24 24">
+                        <path fill="white"
+                            d="M14 10h2v.757a4.5 4.5 0 0 1 7 3.743V20h-2v-5.5c0-1.43-1.174-2.5-2.5-2.5S16 13.07 16 14.5V20h-2V10Zm-2-6v2H4v5h8v2H4v5h8v2H2V4h10Z" />
+                    </svg>
+                    <p>English (C1)</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+
 </body>
 
 </html>
