--- a/Certs.html
+++ b/Certs.html
@@ -18,7 +18,7 @@
         <div class="container flex items-center justify-between mx-auto">
             <turbo-frame id="loadable" class="animate-fade-in-1">
                 <h3 class="mb-4 text-3xl font-bold text-white">Ahmed
-                    <span class="mb-4 text-3xl font-bold text-text-color1 animate-fade-in-2">Ashraf</span> ID:94142</h3>
+                    <span class="mb-4 text-3xl font-bold text-text-color1 animate-fade-in-2">Ashraf</span></h3>
             </turbo-frame>
             <turbo-frame id="loadable" class="animate-fade-in-menu">
                 <ul class="flex space-x-4">
